@@ -1,12 +1,12 @@
 package com.csse3200.game.components.ordersystem;
 
 import com.badlogic.gdx.Gdx;
+import com.badlogic.gdx.Input;
 import com.badlogic.gdx.graphics.OrthographicCamera;
 import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.scenes.scene2d.Stage;
 import com.badlogic.gdx.scenes.scene2d.ui.Label;
 import com.badlogic.gdx.scenes.scene2d.ui.Table;
-import com.badlogic.gdx.utils.TimeUtils;
 import com.badlogic.gdx.utils.viewport.Viewport;
 import com.csse3200.game.components.CombatStatsComponent;
 import com.csse3200.game.entities.Entity;
@@ -28,7 +28,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Random;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.*;
@@ -79,9 +78,6 @@ class MainGameOrderTicketDisplayTest {
 		when(ServiceLocator.getPlayerService().getEvents()).thenReturn(eventHandler2);
 
 		orderTicketDisplay = new MainGameOrderTicketDisplay(renderService, playerService);
-//		orderTicketDisplay = new MainGameOrderTicketDisplay();
-//        String[] recipeNames = {"acaiBowl", "salad", "fruitSalad", "steakMeal", "bananaSplit"};
-//        String randomRecipe = recipeNames[new Random().nextInt(recipeNames.length)];
 		orderTicketDisplay.setRecipe("acaiBowl");
 		Entity entity = new Entity();
 		entity.addComponent(orderTicketDisplay);
@@ -100,7 +96,7 @@ class MainGameOrderTicketDisplayTest {
 	 * Tests that create() are initializes UI components correctly
 	 */
 	@Test
-	public void testCreateInitializesComponents() {
+	void testCreateInitializesComponents() {
 		orderTicketDisplay.create();
 
 		Assertions.assertNotNull(
@@ -115,7 +111,7 @@ class MainGameOrderTicketDisplayTest {
 	 * test addActors() creates table
 	 */
 	@Test
-	public void testAddActorsAddsUIComponents() {
+	void testAddActorsAddsUIComponents() {
 		orderTicketDisplay.addActors();
 		verify(stage).addActor(any(Table.class));
 	}
@@ -135,7 +131,16 @@ class MainGameOrderTicketDisplayTest {
 
 		Label countdownLabel = MainGameOrderTicketDisplay.getCountdownLabelArrayList().getFirst();
 		Assertions.assertNotNull(countdownLabel);
-		// assertEquals("Timer: 30000", countdownLabel.getText().toString());
+	}
+
+	/**
+	 * Test should reset Order Nmber to Zero
+	 */
+	@Test
+	void shouldResetOrderNumbtoZero() {
+		orderTicketDisplay.addActors();
+		MainGameOrderTicketDisplay.resetOrderNumb();
+		assertEquals(0, (MainGameOrderTicketDisplay.getOrderNumb()));
 	}
 
 	/**
@@ -146,21 +151,20 @@ class MainGameOrderTicketDisplayTest {
 		orderTicketDisplay.addActors();
 		orderTicketDisplay.addActors();
 
-		assertEquals(2, (MainGameOrderTicketDisplay.getTableArrayList()).size());
 		orderTicketDisplay.dispose();
-		assertEquals(0, (MainGameOrderTicketDisplay.getTableArrayList()).size());
+		assertEquals(0, orderTicketDisplay.getTableArrayList().size());
 	}
 
 	/**
 	 * Test docket sizes are sized correctly
 	 */
 	@Test
-	public void testDocketSizesNormalAndEnlarged() {
+	void testDocketSizesNormalAndEnlarged() {
 		orderTicketDisplay.addActors();
 		orderTicketDisplay.addActors();
 		orderTicketDisplay.addActors();
 
-		assertEquals(3, orderTicketDisplay.getTableArrayList().size());
+		assertEquals(3, MainGameOrderTicketDisplay.getTableArrayList().size());
 
 		orderTicketDisplay.updateDocketSizes();
 
@@ -170,33 +174,16 @@ class MainGameOrderTicketDisplayTest {
 		float enlargedDocketWidth = 170f * (orderTicketDisplay.getViewportWidth() / 1920f);
 		float enlargedDocketHeight = 200f * (orderTicketDisplay.getViewportHeight() / 1080f);
 
-		for (int i = 0; i < orderTicketDisplay.getTableArrayList().size() - 1; i++) {
-			Table table = orderTicketDisplay.getTableArrayList().get(i);
+		for (int i = 0; i < MainGameOrderTicketDisplay.getTableArrayList().size() - 1; i++) {
+			Table table = MainGameOrderTicketDisplay.getTableArrayList().get(i);
 			assertEquals(normalDocketWidth, table.getWidth(), 0.1f);
 			assertEquals(normalDocketHeight, table.getHeight(), 0.1f);
 		}
 
-		Table lastTable = orderTicketDisplay.getTableArrayList().get(orderTicketDisplay.getTableArrayList().size() - 1);
+		Table lastTable = MainGameOrderTicketDisplay.getTableArrayList().getLast();
 		assertEquals(enlargedDocketWidth, lastTable.getWidth(), 0.1f);
 		assertEquals(enlargedDocketHeight, lastTable.getHeight(), 0.1f);
 	}
-
-	//TODO current build causes an error with this test and i'm not sure why, might want to compare code
-	/**
-	 * tests countdown decreases correctly
-
-	@Test
-	public void testUpdateCountdownDecreasesCorrectly() {
-		orderTicketDisplay.create();
-		orderTicketDisplay.addActors();
-		long startTime = MainGameOrderTicketDisplay.getStartTimeArrayList().get(0);
-		long elapsedTime = TimeUtils.timeSinceMillis(startTime);
-		orderTicketDisplay.update();
-		assertEquals(
-		  "Timer: " +
-			((orderTicketDisplay.getTimer() - elapsedTime)/1000),
-		  MainGameOrderTicketDisplay.getCountdownLabelArrayList().get(0).getText().toString(), "Timer should orderTicketDisplay correct countdown");
-	}*/
 
 	/**
 	 * Test should dispose the stage
@@ -216,15 +203,15 @@ class MainGameOrderTicketDisplayTest {
 	void testStageDispose() {
 		orderTicketDisplay.addActors();
 		combatStatsComponent = mock(CombatStatsComponent.class);
-		orderTicketDisplay.combatStatsComponent = combatStatsComponent;
+		orderTicketDisplay.setCombatStatsComponent(combatStatsComponent);
 
 		Assertions.assertNotNull(MainGameOrderTicketDisplay.getTableArrayList(), "Table ArrayList should not be null");
 		assertFalse(MainGameOrderTicketDisplay.getTableArrayList().isEmpty(), "Table ArrayList should not be empty");
 		assertNotNull(MainGameOrderTicketDisplay.getBackgroundArrayList(), "Background ArrayList should not be null");
 		assertFalse(MainGameOrderTicketDisplay.getBackgroundArrayList().isEmpty(), "Background ArrayList should not be empty");
 
-		Table table = MainGameOrderTicketDisplay.getTableArrayList().get(0);
-		Docket background = MainGameOrderTicketDisplay.getBackgroundArrayList().get(0);
+		Table table = MainGameOrderTicketDisplay.getTableArrayList().getFirst();
+		Docket background = MainGameOrderTicketDisplay.getBackgroundArrayList().getFirst();
 
 		Assertions.assertNotNull(table, "Table should not be null");
 		Assertions.assertNotNull(background, "Background should not be null");
@@ -234,7 +221,7 @@ class MainGameOrderTicketDisplayTest {
 		logger.info("Table: {}", table);
 		logger.info("Background: {}", background);
 
-		orderTicketDisplay.stageDispose(background, table, 0, true);
+		orderTicketDisplay.stageDispose(background, table, 0);
 
 		assertTrue(table.getChildren().isEmpty(), "Table should be cleared of children.");
 		assertTrue(hasChildrenBeforeDispose, "Table should have had children before dispose.");
@@ -254,19 +241,23 @@ class MainGameOrderTicketDisplayTest {
 	 * Tests if only one docket is present, then checks if it has enlarged docket dimensions.
 	 */
 	@Test
-	public void testDocketEnlargement() {
+	void testDocketEnlargement() {
 		// Add a new docket
 		orderTicketDisplay.addActors();
 
 		orderTicketDisplay.updateDocketSizes();
 
-		Table lastDocketTable = MainGameOrderTicketDisplay.getTableArrayList().get(MainGameOrderTicketDisplay.getTableArrayList().size() - 1);
+		Table lastDocketTable = MainGameOrderTicketDisplay.getTableArrayList().getLast();
 
 		float lastDocketWidth = lastDocketTable.getWidth();
 		float lastDocketHeight = lastDocketTable.getHeight();
 
-		float expectedEnlargedWidth = 1280f * 0.08f * orderTicketDisplay.getScalingFactor(Gdx.graphics.getWidth(), Gdx.graphics.getHeight()) * 1.7f;
-		float expectedEnlargedHeight = 800f * 0.25f * orderTicketDisplay.getScalingFactor(Gdx.graphics.getWidth(), Gdx.graphics.getHeight()) * 1.7f;
+		float expectedEnlargedWidth = 1280f * 0.08f * MainGameOrderTicketDisplay.getScalingFactor(
+				Gdx.graphics.getWidth(),
+				Gdx.graphics.getHeight()) * 1.7f;
+		float expectedEnlargedHeight = 800f * 0.25f * MainGameOrderTicketDisplay.getScalingFactor(
+				Gdx.graphics.getWidth(),
+				Gdx.graphics.getHeight()) * 1.7f;
 
 		assertTrue(Math.abs(lastDocketWidth - expectedEnlargedWidth) < 1.0f, "Docket width is not as expected");
 		assertTrue(Math.abs(lastDocketHeight - expectedEnlargedHeight) < 1.0f, "Docket height is not as expected");
@@ -279,63 +270,88 @@ class MainGameOrderTicketDisplayTest {
 	void testGetRecipeName() {
 		Recipe recipe = orderTicketDisplay.getRecipe();
 
+		assertNotNull(recipe, "Recipe should not be null");
 		assertEquals("acaiBowl", recipe.getName(), "The recipe name should be 'acaiBowl'");
 	}
 
 	/**
-	 * Tests that steak meal is displayed correctly.
+	 * Tests getting the current recipe.
 	 */
+	@Test
+	void testGetCurrentRecipeName() {
+		String recipeName = orderTicketDisplay.getCurrentRecipeName();
+		assertEquals("acaiBowl", recipeName, "The current recipe name should be 'acaiBowl'");
+	}
+
+	/**
+	 * Tests set paused and its paused timers.
+	 */
+	@Test
+	void testSetPaused() {
+		assertFalse(orderTicketDisplay.isPaused());
+		orderTicketDisplay.setPaused(true);
+
+		assertTrue(orderTicketDisplay.isPaused());
+		assertTrue(orderTicketDisplay.getPauseStartTime() > 0);
+		orderTicketDisplay.setPaused(false);
+
+		assertFalse(orderTicketDisplay.isPaused());
+		long elapsedTime = System.currentTimeMillis() - orderTicketDisplay.getPauseStartTime();
+		assertTrue(orderTicketDisplay.getTotalPausedDuration() >= elapsedTime);
+	}
+
+	/**
+	 * Tests if ESCAPE key toggles true or false paused values.
+	 */
+	@Test
+	void testTogglePause() {
+		assertFalse(orderTicketDisplay.isPaused());
+
+		boolean result = orderTicketDisplay.handleKeyDown(Input.Keys.ESCAPE);
+
+		assertTrue(orderTicketDisplay.isPaused());
+		assertTrue(result);
+
+		result = orderTicketDisplay.handleKeyDown(Input.Keys.ESCAPE);
+
+		assertFalse(orderTicketDisplay.isPaused());
+		assertTrue(result);
+	}
+
+	/**
+	 * Helper method to test if a meal is displayed correctly.
+	 */
+	private void testMealDisplay(String recipeName) {
+		orderTicketDisplay.setRecipe(recipeName);
+		orderTicketDisplay.create();
+		orderTicketDisplay.addActors();
+
+		Table table = MainGameOrderTicketDisplay.getTableArrayList().getFirst();
+		assertNotNull(table, "Table should not be null for " + recipeName);
+	}
+
 	@Test
 	void testSteakMeal() {
-		orderTicketDisplay.setRecipe("steakMeal");
-		orderTicketDisplay.create();
-		orderTicketDisplay.addActors();
-
-		Table table = MainGameOrderTicketDisplay.getTableArrayList().getFirst();
-		assertNotNull(table, "Table should not be null for steakMeal");
+		testMealDisplay("steakMeal");
 	}
 
-	/**
-	 * Tests that salad is displayed correctly.
-	 */
 	@Test
 	void testSalad() {
-		orderTicketDisplay.setRecipe("salad");
-		orderTicketDisplay.create();
-		orderTicketDisplay.addActors();
-
-		Table table = MainGameOrderTicketDisplay.getTableArrayList().getFirst();
-		assertNotNull(table, "Table should not be null for salad");
+		testMealDisplay("salad");
 	}
 
-	/**
-	 * Tests that fruit salad is displayed correctly.
-	 */
 	@Test
 	void testFruitSalad() {
-		orderTicketDisplay.setRecipe("fruitSalad");
-		orderTicketDisplay.create();
-		orderTicketDisplay.addActors();
-
-		Table table = MainGameOrderTicketDisplay.getTableArrayList().getFirst();
-		assertNotNull(table, "Table should not be null for fruitSalad");
+		testMealDisplay("fruitSalad");
 	}
 
-	/**
-	 * Tests that banana split is displayed correctly.
-	 */
 	@Test
 	void testBananaSplit() {
-		orderTicketDisplay.setRecipe("bananaSplit");
-		orderTicketDisplay.create();
-		orderTicketDisplay.addActors();
-
-		Table table = MainGameOrderTicketDisplay.getTableArrayList().getFirst();
-		assertNotNull(table, "Table should not be null for bananaSplit");
+		testMealDisplay("bananaSplit");
 	}
 
 	/**
-	 * Test shoulg get the Z index
+	 * Test should get the Z index
 	 */
 	@Test
 	void testGetZIndex() {
